@@ -23,5 +23,5 @@ class TestTrashInfoPath:
         self.assert_path_for_trashinfo_is('dir/file'      , '/volume/dir/file')
 
     def assert_path_for_trashinfo_is(self, expected_value, file_to_be_trashed):
-        result = self.dir._path_for_trashinfo(file_to_be_trashed)
+        result = self.dir.path_for_trash_info.for_file(file_to_be_trashed)
         assert_equals(expected_value, result)
